Fix Netlify deployment issues - Update netlify.toml with proper environment variables - Remove deprecated Vercel packages - Add .npmrc to suppress warnings - Configure build to ignore CI warnings and source maps

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,9 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  CI = "false"
+  GENERATE_SOURCEMAP = "false"
+  NPM_FLAGS = "--no-audit --no-fund --silent"
 
 [[redirects]]
   from = "/*"
