--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
