--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
+    "react-spring": "^10.0.1",
     "typescript": "^4.9.5"
   },
   "scripts": {
